@@ -2,6 +2,7 @@ Version 0.7: Not yet released.
  * Fix bug in chest break protection
  * Implement a more stringent and specific ACL
  * Conversation-based ACL controls
+ * Permissions can control chest limits
 
 Version 0.6.2: 2013-02-04
  * Play nice with SignThatChest by allowing signs right in front of a chest.
